--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,11 @@
             </div>
         </div>
 
+        <form action="send-email" method="POST">
+            <input name="test" />
+            <button type="submit">submit0</button>
+        </form>
+
         <footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
             <script src="testimonials.js"></script>
