--- a/templates/index.html
+++ b/templates/index.html
@@ -1,61 +1,57 @@
 <html>
     <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
-            #navigation
-            {
-                position:fixed;
-                background-color: white;
-                width: 100%;
-            }
-            #testimonials
-            {
-                height: 45vh;
-                background-color: #527cb8;
-                color: white;
-                display: flex;
-                justify-content: center;
-                text-align: center;
-            }
-        </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
 
-        <div id="navigation">
+        <section id="navigation" class="sticky-top">
             <div class="row">
-                <div class="col-3" style="color:blue"><h2> Tan Huong Painting Services </h2></div>
+                <div class="col-3"><a href="."><h2>Tan Huong Painting Services</h2></a></div>
                 <div class="col-9">                    
-                    <div>
-                        <h2>
-                    <a href="#home">Home</a>
-                    <a href="#about">About Us</a>
-                    <a href="#testimonials">Testimonials</a>
-                    <a href="#whatwedo">What we do</a>
-                    <a href="#quote">Get a free no-obligation Quote!</a>                    
-                </h2>
-                </div>
+                    <div class="d-none d-md-block">
+                        <h2 id="menu">
+                            <a href="#home">Home</a>
+                            <a href="#about">About Us</a>
+                            <a href="#testimonials">Testimonials</a>
+                            <a href="#whatwedo">What we do</a>
+                            <a href="#quote">Get a free no-obligation Quote!</a>                    
+                        </h2>
+                    </div>
+                    
+
+                    <div style="background-color: green;" class="d-block d-md-none">
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#navbarmenu" aria-controls="navbarmenu" aria-expanded="false">
+                                <i class="fa fa-bars" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div id="navbarmenu" class="collapse">
+                            <h2 id="test">
+                                <a href="#home">Home</a>
+                                <a href="#about">About Us</a>
+                                <a href="#testimonials">Testimonials</a>
+                                <a href="#whatwedo">What we do</a>
+                                <a href="#quote">Get a free no-obligation Quote!</a>                    
+                            </h2>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
         
         <br>    
-        <div id="home" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner w-75">
-                <br>
-                <br>
-                <h1 class="text-center">Painting Services</h1>
-                <br />
-            </div>
+        <section id="home">
+            <h1 class="text-center">Painting Services</h1>
             <h4> Providing interior & exterior painting in Wellington for over 15 years </h4>
-
-
-        </div>
+        </section>
 
         <br>
-        <div id="about" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner w-75">
+        <section id="about">
+            <div>
                 <h1 class="text-center">About Us</h1>
                 <h4> About Us</h4>
                 <h4>We service most of the Wellington Region with a focus on the Eastern & Southern Suburbs, Wellington City and Johnsonville.</h4>
@@ -66,52 +62,84 @@
                 <br>
                 <h4>Whether your home needs an extensive overhaul, or a simple touch up we are the local team you can trust.</h4>
                 <br />
+                <h4><a href="#quote">Give us a call today</a> for a free no-obligation quote for your painting and repairs work for both commercial and residential properties.</h4>
             </div>
-        </div>
+            
+            <div class="container-fluid">
+                <h2 class="text-center">Use the blue slider to see some before and after images of our work</h2>
+                <div id="comparison" class="row"></div>
+            </div>
+        </section>
 
         <br>
 
-        <div id="testimonials" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner w-75">
-                <h1 class="text-center">What our customers say about us</h1>
-                <br />
+        <section id="testimonials">
+            <div id="testimonials-div" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner w-75">
+                    <h1 class="text-center">What our customers say about us</h1>
+                    <br />
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#testimonials" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonials" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#testimonials" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#testimonials" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+            <br />
+            <div id="pictures" class="carousel slide container-fluid mt-3" data-bs-ride="carousel">
+                <div class="d-flex justify-content-center">
+                    <p class="d-flex justify-content-end w-50">
+                        <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="prev">
+                            <i class="fa fa-arrow-left"></i>
+                        </button>
+                        <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="next">
+                            <i class="fa fa-arrow-right"></i>
+                        </button>
+                    </p>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div class="carousel-inner w-50"></div>
+                </div>
+            </div>
+        </section>
 
         <br />
-        <div id="pictures" class="carousel slide container-fluid mt-3" data-bs-ride="carousel">
-            <div class="d-flex justify-content-center">
-                <p class="d-flex justify-content-end w-50">
-                    <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="prev">
-                        <i class="fa fa-arrow-left"></i>
-                    </button>
-                    <button class="btn" type="button" data-bs-target="#pictures" data-bs-slide="next">
-                        <i class="fa fa-arrow-right"></i>
-                    </button>
-                </p>
-            </div>
-            <div class="d-flex justify-content-center">
-                <div class="carousel-inner w-50"></div>
-            </div>
-        </div>
 
-        <form action="send-email" method="POST">
-            <input name="test" />
-            <button type="submit">submit0</button>
-        </form>
+        <section id="whatwedo">
+            <h3>What we do</h3>
+            <br />
+            <div>
+                <h4>We specialise in interior and exterior repair, preparation
+                    and painting including: re-cladding, roof repair, paint stripping, plastering, decking
+                    and fencing.</h4>
+                <p>We pride ourselves in managing your project from start to
+                    finish. We often come across rotten boards or framing that need replacing, even wiring
+                    that has seen better days. With most painters you the job with stop and you would have
+                    to organise a builder or electrician, but with VH Painting we have a great network ready
+                    to call in so your job gets done, as fast and cost effective as possible.</p>
+                <p>Don’t worry about chasing multiple tradies, we can manage all
+                    aspects of the job and organise times with different tradies to get your job done.</p>
+            </div>
+        </section>
+
+        <section id="quote">
+            <form action="send-email" method="POST">
+                <input name="test" />
+                <button type="submit">submit0</button>
+            </form>
+        </section>
+
 
         <footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+            <script src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.min.js"></script>
+            <script src="comparison.js"></script>
             <script src="testimonials.js"></script>
             <script src="pictures.js"></script>
+            <script src="index.js"></script>
         </footer>
     </body>
 </html>
