--- a/templates/index.html
+++ b/templates/index.html
@@ -23,19 +23,19 @@
                     </div>
                     
 
-                    <div style="background-color: green;" class="d-block d-md-none">
+                    <div class="d-block d-md-none">
                         <div class="d-flex justify-content-end">
-                            <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#navbarmenu" aria-controls="navbarmenu" aria-expanded="false">
+                            <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu" aria-controls="navbarmenu" aria-expanded="false">
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                             </button>
                         </div>
                         <div id="navbarmenu" class="collapse">
-                            <h2 id="test">
-                                <a href="#home">Home</a>
-                                <a href="#about">About Us</a>
-                                <a href="#testimonials">Testimonials</a>
-                                <a href="#whatwedo">What we do</a>
-                                <a href="#quote">Get a free no-obligation Quote!</a>                    
+                            <h2 class="text-end mt-2">
+                                <a href="#home">Home</a><br />
+                                <a href="#about">About Us</a> <br />
+                                <a href="#testimonials">Testimonials</a> <br />
+                                <a href="#whatwedo">What we do</a><br />
+                                <a href="#quote">Get a free no-obligation Quote!</a><br />
                             </h2>
                         </div>
                     </div>
@@ -50,10 +50,9 @@
         </section>
 
         <br>
-        <section id="about">
+        <section id="about" class="p-5">
             <div>
-                <h1 class="text-center">About Us</h1>
-                <h4> About Us</h4>
+                <h1 style="color: #1e73be;">VH Painting Services have been Professional Painters in Wellington for over 15 years.</h1>
                 <h4>We service most of the Wellington Region with a focus on the Eastern & Southern Suburbs, Wellington City and Johnsonville.</h4>
                 <br>
                 <h4>We can assist with everything from initial colour consultation through to Exterior and Interior painting of your home. We complete the job to a professional and excellent standard and all work is under warranty for 3 years.</h4>
@@ -125,13 +124,54 @@
             </div>
         </section>
 
-        <section id="quote">
+        <section id="quote" class="p-5">
             <form action="send-email" method="POST">
-                <input name="test" />
-                <button type="submit">submit0</button>
-            </form>
-        </section>
+                <h3>Give us a call or fill out the form below for a free no-obligation quote:</h3>
+                <h4>Ben Hoang</h4>
+                <p>Number: <strong><a href="tel:049731743">04 973 1743</a></strong> or <strong><a href="tel:0212945988">021 294 5988</a></strong></p>
+                <p>Email: <strong><a href="mailto:vhpainting.building@gmail.com">vhpainting.building@gmail.com</a></strong></p>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2998.0219806363543!2d174.7423800158549!3d-41.2866260792734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d38b04e7fcfc761%3A0xd24bcaf9a8d2f69e!2s4%2F43%20Cooper%20Street%2C%20Karori%2C%20Wellington%206012!5e0!3m2!1sen!2snz!4v1620793535314!5m2!1sen!2snz" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                        <div class="col row">
+                            <div class="col-6">
+                                <label class="form-label">Name *</label>
+                                <input type="text" name="name" class="form-control">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Phone</label>
+                                <input type="text" name="phone" class="form-control">
+                            </div>
+                            <div class="col-12">
+                                <label class="form-label">Suburb</label>
+                                <input type="text" name="surburb" class="form-control">
+                            </div>
+                            <div class="col-12">
+                                <label class="form-label">How can we help you?</label>
+                                <textarea name="message" rows="5" class="w-100"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </form>
+            <div id="contact-information">
+                <div class="row justify-content-center">
+                    <div class="col-6 text-center">
+                        <h4>Contact VH Painting Services</h4>
+                        <h4>Ben Hoang</h4>
+                        <p>Number: <strong><a href="tel:049731743">04 973 1743</a></strong> or <strong><a href="tel:0212945988">021 294 5988</a></strong></p>
+                        <p>Email: <strong><a href="mailto:vhpainting.building@gmail.com">vhpainting.building@gmail.com</a></strong></p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
         <footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
