--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 
     <body>
 
-        <section id="navigation" class="sticky-top">
+        <section id="navigation" class="sticky-top w-100 bg-light">
             <div class="row">
-                <div class="col-3"><a href="."><h2>Tan Huong Painting Services</h2></a></div>
+                <div class="col-3"><a href="."><h2>Daluxe Painting Services</h2></a></div>
                 <div class="col-9">                    
                     <div class="d-none d-md-block">
                         <h2 id="menu">
@@ -45,14 +45,16 @@
         
         <br>    
         <section id="home">
-            <h1 class="text-center">Painting Services</h1>
-            <h4> Providing interior & exterior painting in Wellington for over 15 years </h4>
+            <div class="home-title">
+                <h1>Daluxe Painting Services</h1>
+                <h4>Top Quality Painters for house exterior and interior</h4>
+            </div>
         </section>
 
         <br>
         <section id="about" class="p-5">
             <div>
-                <h1 style="color: #1e73be;">VH Painting Services have been Professional Painters in Wellington for over 15 years.</h1>
+                <h1 style="color: #1e73be;">Daluxe Painting Service povide top quality painters for house exterior and interior.</h1>
                 <h4>We service most of the Wellington Region with a focus on the Eastern & Southern Suburbs, Wellington City and Johnsonville.</h4>
                 <br>
                 <h4>We can assist with everything from initial colour consultation through to Exterior and Interior painting of your home. We complete the job to a professional and excellent standard and all work is under warranty for 3 years.</h4>
@@ -163,7 +165,7 @@
             <div id="contact-information">
                 <div class="row justify-content-center">
                     <div class="col-6 text-center">
-                        <h4>Contact VH Painting Services</h4>
+                        <h4>Contact Deluxe Painting Service</h4>
                         <h4>Ben Hoang</h4>
                         <p>Number: <strong><a href="tel:049731743">04 973 1743</a></strong> or <strong><a href="tel:0212945988">021 294 5988</a></strong></p>
                         <p>Email: <strong><a href="mailto:vhpainting.building@gmail.com">vhpainting.building@gmail.com</a></strong></p>
