--- a/templates/style.css
+++ b/templates/style.css
@@ -1,17 +1,33 @@
-#navigation
-{
-    background-color: orange;
-    width: 100%;
-    z-index: 1000;
-}
 #navigation h2
 {
     font-size: large;
+    padding: 0.5rem;
 }
 #menu * 
 {
     margin-left: 1rem;
     margin-right: 1rem;
+}
+#home
+{
+    background-image: url("https://www.capitalpaintingservices.co.nz/wp-content/uploads/2017/07/painting-black-paint-roller-1080x675.jpg");
+    height: 50vh;
+    margin: 1rem;
+
+}
+.home-title
+{
+    position: absolute;
+    top: 25%;
+    left: 5%;
+}
+.home-title h1
+{
+    color: #527cb8;
+}
+.home-title h4
+{
+    color: white;
 }
 #testimonials-div
 {
