look like all done - just need to get the thing online and test

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css" />
         <link rel="stylesheet" href="style.css" />
+        <title>Deluxe Painting Service</title>
     </head>
 
     <body>
@@ -129,9 +130,9 @@
         <section id="quote" class="p-5">
             <form action="send-email" method="POST">
                 <h3>Give us a call or fill out the form below for a free no-obligation quote:</h3>
-                <h4>Ben Hoang</h4>
-                <p>Number: <strong><a href="tel:049731743">04 973 1743</a></strong> or <strong><a href="tel:0212945988">021 294 5988</a></strong></p>
-                <p>Email: <strong><a href="mailto:vhpainting.building@gmail.com">vhpainting.building@gmail.com</a></strong></p>
+                <p>Hellen: <strong><a href="tel:0226502625">0226502625</a></strong></p>
+                <p>Teddy: <strong><a href="tel:0224887456">0224887456</a></strong></p>
+                <p>Email: <strong><a href="mailto:daluxepainting@gmail.com">daluxepainting@gmail.com</a></strong></p>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col">
@@ -166,9 +167,9 @@
                 <div class="row justify-content-center">
                     <div class="col-6 text-center">
                         <h4>Contact Deluxe Painting Service</h4>
-                        <h4>Ben Hoang</h4>
-                        <p>Number: <strong><a href="tel:049731743">04 973 1743</a></strong> or <strong><a href="tel:0212945988">021 294 5988</a></strong></p>
-                        <p>Email: <strong><a href="mailto:vhpainting.building@gmail.com">vhpainting.building@gmail.com</a></strong></p>
+                        <p>Hellen: <strong><a href="tel:0226502625">0226502625</a></strong></p>
+                        <p>Teddy: <strong><a href="tel:0224887456">0224887456</a></strong></p>
+                        <p>Email: <strong><a href="mailto:daluxepainting@gmail.com">daluxepainting@gmail.com</a></strong></p>
                     </div>
                 </div>
 
