final check - should be good to go now

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                 <h3>Give us a call or fill out the form below for a free no-obligation quote:</h3>
                 <p>Hellen: <strong><a href="tel:0226502625">0226502625</a></strong></p>
                 <p>Teddy: <strong><a href="tel:0224887456">0224887456</a></strong></p>
-                <p>Email: <strong><a href="mailto:daluxepainting@gmail.com">daluxepainting@gmail.com</a></strong></p>
+                <p>Email: <strong><a href="mailto:dinhtannguyen78@gmail.com.com">dinhtannguyen78@gmail.com.com</a></strong></p>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col">
@@ -169,7 +169,7 @@
                         <h4>Contact Deluxe Painting Service</h4>
                         <p>Hellen: <strong><a href="tel:0226502625">0226502625</a></strong></p>
                         <p>Teddy: <strong><a href="tel:0224887456">0224887456</a></strong></p>
-                        <p>Email: <strong><a href="mailto:daluxepainting@gmail.com">daluxepainting@gmail.com</a></strong></p>
+                        <p>Email: <strong><a href="mailto:dinhtannguyen78@gmail.com.com">dinhtannguyen78@gmail.com.com</a></strong></p>
                     </div>
                 </div>
 
